@@ -94,6 +94,7 @@ BEGIN
     BUTTON      ID_BUTTON_STEP
     SEPARATOR
     BUTTON      ID_BUTTON_DIRECT
+    BUTTON      ID_BUTTON_REFRESH
 END
 
 
@@ -155,6 +156,7 @@ BEGIN
         MENUITEM "Insert Audio Renderer",       ID_GRAPH_INSERTAUDIORENDERER
         MENUITEM "Insert Video Renderer",       ID_GRAPH_INSERTVIDEORENDERER
         MENUITEM SEPARATOR
+        MENUITEM "Refresh Graph\tCtrl+F5",      ID_BUTTON_REFRESH
         MENUITEM "Make Graph Screenshot\tCtrl+F12", ID_GRAPH_MAKEGRAPHSCREENSHOT
     END
     POPUP "Filters"
@@ -200,6 +202,9 @@ END
 
 IDR_MAINFRAME ACCELERATORS 
 BEGIN
+    VK_SPACE,       ID_BUTTON_PLAYPAUSE,    VIRTKEY, NOINVERT
+    VK_RIGHT,       ID_BUTTON_STEP,         VIRTKEY, NOINVERT
+    VK_ESCAPE,      ID_BUTTON_STOP,         VIRTKEY, NOINVERT
     "C",            ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_INSERT,      ID_EDIT_COPY,           VIRTKEY, CONTROL, NOINVERT
     VK_DELETE,      ID_EDIT_CUT,            VIRTKEY, SHIFT, NOINVERT
@@ -230,9 +235,7 @@ BEGIN
     "+",            ID_VIEW_INCREASEZOOMLEVEL, ASCII, NOINVERT
     "=",            ID_VIEW_INCREASEZOOMLEVEL, ASCII, NOINVERT
     "T",            ID_VIEW_TEXTINFORMATION, VIRTKEY, CONTROL, NOINVERT
-    VK_RIGHT,       ID_BUTTON_STEP,         VIRTKEY, NOINVERT
-    VK_ESCAPE,      ID_BUTTON_STOP,         VIRTKEY, NOINVERT
-    VK_SPACE,       ID_BUTTON_PLAYPAUSE,    VIRTKEY, NOINVERT
+    VK_F5,          ID_BUTTON_REFRESH,      VIRTKEY, CONTROL, NOINVERT
 END
 
 
@@ -662,6 +665,7 @@ STRINGTABLE
 BEGIN
     ID_BUTTON_DIRECT        "DirectConnect mode toggle"
     ID_BUTTON_STEP          "Frame Step"
+    ID_BUTTON_REFRESH       "Refresh the graph display"
 END
 
 #endif    // Slovak resources
