@@ -125,13 +125,15 @@
 #define ID_OPTIONS_DIRECT               32837
 #define ID_BUTTON_STEP                  32838
 #define ID_BUTTON_PLAYPAUSE             32841
+#define ID_BUTTON_REFRESH               32843
+#define ID_GRAPH_REFRESHGRAPH           32844
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        148
-#define _APS_NEXT_COMMAND_VALUE         32843
+#define _APS_NEXT_COMMAND_VALUE         32845
 #define _APS_NEXT_CONTROL_VALUE         1034
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
